# GameProgrammingGems

GameProgrammingGems6游戏编程精粹6光盘代码/: License README.rtf  README.rtf  光盘说明.doc
GameProgrammingGems6游戏编程精粹6光盘代码/GLEW/: glew-1.3.3-linux32.tgz
GameProgrammingGems6游戏编程精粹6光盘代码/第1章 通用编程/1-3-ComputerVisionUsingOpenCV/: CodeFromBook.cpp  README.txt
GameProgrammingGems6游戏编程精粹6光盘代码/第1章 通用编程/1-6-ClosestStringMatching/: ClosestMatch.cpp
GameProgrammingGems6游戏编程精粹6光盘代码/第1章 通用编程/1-9-FasterFileLoading/: Cygwin README.rtf
GameProgrammingGems6游戏编程精粹6光盘代码/第6章 音频/6-6-FakingDSPEffects/: readme.txt
GameProgrammingGems6游戏编程精粹6光盘代码/第7章 网络及多玩家/7-1-Streaming3DAnimationData/: BBA_LoA.xslt
GameProgrammingGemsV游戏编程精粹5光盘代码/: README.rtf  光盘说明.doc
游戏编程精粹1光盘源代码/AI/00Rabin/: ai_engine.dsp  (+2 more)
游戏编程精粹4光盘源代码/: README.doc  光盘说明.HTM
游戏编程精粹7光盘代码/3 AI/01 Creating Interesting Agents With Behavior Cloning/: Makefile.am  Makefile.in  README  VC8.sln  configure  configure.in
游戏编程精粹7光盘代码/3 AI/01 Creating Interesting Agents With Behavior Cloning/AIShooter/: AIShooter.cpp  AIShooter.h  AIShooter.vcproj  Agent.cpp  Agent.h  Background.cpp  Background.h  Bullet.cpp  Bullet.h  Common.h  GameObject.h  Learn.cpp  Learn.vcproj  Makefile.am  Makefile.in  Ship.cpp  Ship.h  TreeWriter.cpp  TreeWriter.h  Vector2.h  agent.lua  agent_kill.lua  agent_loop.lua  agent_null.lua  main.cpp
游戏编程精粹7光盘代码/3 AI/01 Creating Interesting Agents With Behavior Cloning/DecisionTree/: DataSet.cpp  DataSet.h  DecisionTree.vcproj  FeatureMap.cpp  FeatureMap.h  Functions.h  Makefile.am  Makefile.in  TreeNode.cpp  TreeNode.h
(+5076 files in other folders)
