AC_INIT()
AM_INIT_AUTOMAKE(AIShooter,0.1)
AC_LANG(C++)
AC_PROG_CXX
AC_PROG_RANLIB
AC_CHECK_HEADERS(GL/gl.h GL/glu.h, ,[AC_MSG_ERROR(
	[Could not find OpenGL headers, please install OpenGL])])
AC_CHECK_HEADERS(GL/glut.h, ,[AC_MSG_ERROR(
	[Could not find GLUT (GL Utility Toolkit) headers, please install GLUT])])
AC_CHECK_HEADERS(lua.h lualib.h lauxlib.h, ,[AC_MSG_ERROR(
	[Could not find Lua headers. Install or download source from http://www.lua.org])])
AC_OUTPUT(Makefile DecisionTree/Makefile AIShooter/Makefile)
